Demo: Revert to virtualization
- Add Escape key to unselect
- Add Ctrl + C key to copy selected icon to clipboard
- Add animation selection
- Minor optimizations

--- a/Material.Icons.Avalonia.Demo/Views/MainWindow.axaml
+++ b/Material.Icons.Avalonia.Demo/Views/MainWindow.axaml
@@ -1,9 +1,9 @@
 <Window x:Class="Material.Icons.Avalonia.Demo.Views.MainWindow"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
         xmlns:controls="clr-namespace:Material.Icons.Avalonia.Demo.Controls"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:icon="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:models="clr-namespace:Material.Icons.Avalonia.Demo.Models"
         xmlns:system="clr-namespace:System;assembly=System.Runtime.Extensions"
@@ -20,51 +20,71 @@
     <models:StringJoinConverter x:Key="StringJoinConverter"
                                 Separator="{x:Static system:Environment.NewLine}" />
   </Window.Resources>
+  <Window.Styles>
+    <Style Selector="controls|SelectionWrapper:selectednow > Border">
+      <Setter Property="Background" Value="Gray" />
+    </Style>
+  </Window.Styles>
+  <Window.KeyBindings>
+    <KeyBinding Command="{Binding Unselect}"
+                Gesture="Escape" />
+    <KeyBinding Command="{Binding CopySelected}"
+                Gesture="Ctrl + C" />
+  </Window.KeyBindings>
   <Design.DataContext>
     <vm:MainWindowViewModel />
   </Design.DataContext>
-  <Grid ColumnDefinitions="*, *, Auto"
+  <Grid ColumnDefinitions="*, *, 100"
         RowDefinitions="*, Auto">
+    <ScrollViewer Grid.ColumnSpan="3"
+                  HorizontalScrollBarVisibility="Disabled"
+                  VerticalScrollBarVisibility="Visible">
+      <ItemsRepeater HorizontalAlignment="Center"
+                     ItemsSource="{Binding Kinds}">
+        <ItemsRepeater.Layout>
+          <UniformGridLayout />
+        </ItemsRepeater.Layout>
+        <ItemsRepeater.ItemTemplate>
+          <DataTemplate DataType="models:PackIconKindGroup">
+            <controls:SelectionWrapper CurrentSelected="{Binding $parent[ItemsRepeater].DataContext.Group, Mode=TwoWay}"
+                                       DataSource="{Binding .}">
+              <Border Name="MainBorder">
+                <DockPanel Width="64"
+                           Height="64"
+                           Margin="2"
+                           Background="Transparent"
+                           ToolTip.Tip="{Binding Aliases, Converter={StaticResource StringJoinConverter}}">
+                  <TextBlock HorizontalAlignment="Center"
+                             DockPanel.Dock="Bottom"
+                             FontSize="10"
+                             Text="{Binding Kind}" />
 
-    <ListBox Name="IconLibraryListView"
-             Grid.Row="0"
-             Grid.Column="0"
-             Grid.ColumnSpan="2"
-             ItemsSource="{Binding Kinds}"
-             ScrollViewer.HorizontalScrollBarVisibility="Disabled">
-      <ListBox.ItemsPanel>
-        <ItemsPanelTemplate>
-          <WrapPanel ItemHeight="64"
-                     ItemWidth="64" />
-        </ItemsPanelTemplate>
-      </ListBox.ItemsPanel>
-      <ListBox.ItemTemplate>
-        <DataTemplate DataType="models:PackIconKindGroup">
-          <DockPanel Margin="2"
-                     Background="Transparent"
-                     ToolTip.Tip="{Binding Aliases, Converter={StaticResource StringJoinConverter}}">
-            <TextBlock HorizontalAlignment="Center"
-                       DockPanel.Dock="Bottom"
-                       FontSize="10"
-                       Text="{Binding Kind}" />
-
-            <icon:MaterialIcon HorizontalAlignment="Center"
-                               VerticalAlignment="Center"
-                               IconSize="32"
-                               Kind="{Binding Kind}" />
-          </DockPanel>
-        </DataTemplate>
-      </ListBox.ItemTemplate>
-    </ListBox>
+                  <avalonia:MaterialIcon Width="32"
+                                         Height="32"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Center"
+                                         Animation="{Binding $parent[Window].DataContext.Animation}"
+                                         Kind="{Binding Kind}" />
+                </DockPanel>
+              </Border>
+            </controls:SelectionWrapper>
+          </DataTemplate>
+        </ItemsRepeater.ItemTemplate>
+      </ItemsRepeater>
+    </ScrollViewer>
 
     <TextBox Grid.Row="1"
              Grid.Column="0"
-             Classes="clearButton"
              Text="{Binding SearchText}"
-             Watermark="{Binding Kinds.Length, StringFormat='Search from {0} icons'}" />
+             Watermark="{Binding IconCount, StringFormat='Search from {0} icons'}" />
     <TextBox Grid.Row="1"
              Grid.Column="1"
              IsReadOnly="True"
-             Text="{Binding #IconLibraryListView.SelectedItem.Kind, StringFormat='&lt;icon:MaterialIcon Kind=&quot;{0}&quot; /&gt;', FallbackValue=''}" />
+             Text="{Binding Group.Kind, FallbackValue='', StringFormat='&lt;icon:MaterialIcon Kind=&quot;{0}&quot; /&gt;'}" />
+
+    <ComboBox Grid.Row="1"
+              Grid.Column="2"
+              ItemsSource="{Binding Animations, Mode=OneTime}"
+              SelectedItem="{Binding Animation}"/>
   </Grid>
 </Window>
