--- a/Material.Icons.Avalonia.Demo/Views/MainWindow.axaml
+++ b/Material.Icons.Avalonia.Demo/Views/MainWindow.axaml
@@ -90,14 +90,14 @@
     <Button Grid.Row="1"
             Grid.Column="3"
             IsEnabled="False"
-            Content="{icon:MaterialIconTextExt KindBinding={Binding DisabledIconKind}, Text={Binding DisabledIconText}, AnimationBinding={Binding Animation}}"/>
+            Content="{icon:MaterialIconTextExt KindBinding={Binding RandomIconKind}, Text={Binding DisabledIconText}, AnimationBinding={Binding Animation}}"/>
 
-    <icon:MaterialIcon Name="RandomIcon"
-                       Grid.Row="1"
+    <icon:MaterialIcon Grid.Row="1"
                        Grid.Column="4"
                        Margin="10,5"
                        Animation="{Binding Animation}"
-                       ToolTip.Tip="Random icon" />
+                       ToolTip.Tip="Random icon"
+                       Kind="{Binding RandomIconKind}" />
 
     <Image Name="RandomImage"
            Grid.Row="1"
