Allow Bindings under MaterialIconExt (#60)
* Allow Bindings under MaterialIconExt

- Add KindBinding
- Change string? Text to object? Text
- Change double? IconSize to object? IconSize
- Add IconForegroundBinding
- Add AnimationBinding

* Cleanup and better random icon handling

* Resolvings

* Update MaterialIconExt.cs

--- a/Material.Icons.Avalonia.Demo/Views/MainWindow.axaml
+++ b/Material.Icons.Avalonia.Demo/Views/MainWindow.axaml
@@ -90,13 +90,14 @@
     <Button Grid.Row="1"
             Grid.Column="3"
             IsEnabled="False"
-            Content="{icon:MaterialIconTextExt Kind=SyncDisabled, Text='Disabled'}"/>
+            Content="{icon:MaterialIconTextExt KindBinding={Binding RandomIconKind}, Text={Binding DisabledIconText}, AnimationBinding={Binding Animation}}"/>
 
-    <icon:MaterialIcon Name="RandomIcon"
-                       Grid.Row="1"
+    <icon:MaterialIcon Grid.Row="1"
                        Grid.Column="4"
                        Margin="10,5"
-                       ToolTip.Tip="Random icon" />
+                       Animation="{Binding Animation}"
+                       ToolTip.Tip="Random icon"
+                       Kind="{Binding RandomIconKind}" />
 
     <Image Name="RandomImage"
            Grid.Row="1"
@@ -107,6 +108,7 @@
            ToolTip.Tip="Random icon image">
       <icon:MaterialIcon Name="RandomImageIcon"
                          Foreground="DeepPink"
+                         Animation="{Binding Animation}"
                          Kind="Heart" />
     </Image>
 
